Infinite loop in ZCL Discover Attributes dissection
This issue was migrated from bug 5303 in our old bug tracker.
Original bug information:
Reporter: Fred Fierling
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Windows XP
Platform: x86
Version: 1.5.x (Experimental)
Attachments:
zbee-zcl-iLoop-Fix.patch: Patch to correct ZCL Discover Attributes Response dissector
zcl-cmds-v1.pcap: Test packets for ZigBee ZCL commands