From Fred Fierling: Infinite loop in ZCL Discover Attributes dissection

https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=5303

svn path=/trunk/; revision=34575